<resources>
    <string name="app_name">TutManager</string>
    <string name="attendance">Attendance</string>
    <string name="students">Students</string>
    <string name="enquiry">Enquiry</string>
    <string name="fees">Fees</string>
    <string name="attendance_info">Manage, view, and edit student attendance</string>
    <string name="student_info">View, edit, or delete list of registered students</string>
    <string name="fees_info">View, mark fees payment</string>
    <string name="enquiry_info">View list of enquiries, confirm admissions</string>
    <string name="no_enquiry_text">No enquiries yet</string>
    <string name="no_student_text">No confirmed students yet</string>
    <string name="no_attendance_text">No attendance details yet</string>
    <string name="no_fee_text">No fee details yet</string>
    <string name="fab_content_desc">Add new Enquiry</string>
    <string name="enquiry_add_text">Enter following details</string>
    <string name="enquiry_add_button">Add Enquiry</string>

    <string name="student_name">Student Name</string>
    <string name="school_name">School Name</string>
    <string name="class_text">"Class"</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="select_standard">Click to select class</string>
    <string name="confirm">Confirm</string>

    <string name="father_name">Father\'s Name</string>
    <string name="mother_name">Mother\'s Name</string>
    <string name="doj">Date of Joining</string>
    <string name="dob">Date of Birth</string>
    <string name="personal_contact">Personal Contact Number</string>
    <string name="parent_contact">Parent\'s Contact Number</string>
    <string name="email">Email</string>
    <string name="previous_score">Previous Year\'s Score/Grade</string>
    <string name="fresher_repeater">Fresher / Repeater</string>
    <string name="difficult_subs">Difficult Subjects</string>
    <string name="profile_image">Profile Image</string>

    <string name="user_profile_image_content_description">Student Profile Image</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="student_add_button">Add Student</string>
    <string name="update">Update</string>

    <string name="personal_details">Personal Details:</string>
    <string name="academic_details">Academic Details:</string>
    <string name="contact_details">Contact Details:</string>

    <string-array name="schools">
        <item>Select School</item>
        <item>Bal Bharati Vidya Mandir</item>
        <item>People\'s High School</item>
        <item>Mushtifund High School</item>
        <item>Dr. K. B. Hedgewar High School</item>
        <item>Santa Cruz High School</item>
        <item>Rosary High School</item>
        <item>Don Bosco High School</item>
        <item>Mary Immaculate Girl\'s High School</item>
        <item>Other</item>
    </string-array>
    <string-array name="classes">
        <item>Select Class</item>
        <item>Class 8</item>
        <item>Class 9</item>
        <item>Class 10</item>
    </string-array>
    <string-array name="subjects">
        <item>English</item>
        <item>Hindi</item>
        <item>Third Language</item>
        <item>Maths</item>
        <item>Science</item>
        <item>History</item>
        <item>Geography</item>
    </string-array>
    <string-array name="admission_type">
        <item>Fresher</item>
        <item>Repeater</item>
    </string-array>
</resources>